# cw32l012_pac

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  device.x  memory.x
.cargo/: config.toml
examples/: blinky.rs
src/: adc1.rs  atim.rs  bgr.rs  btim1.rs  cordic.rs  crc.rs  dac.rs  dma.rs  dmachannel1.rs  eau.rs  flash.rs  gpioa.rs  gtim1.rs  halltim.rs  i2c1.rs  irmod.rs  iwdt.rs  lib.rs  lptim.rs  opa1.rs  ram.rs  rtc.rs  spi1.rs  sysctrl.rs  uart1.rs  vc1.rs  vc12ref.rs
src/adc1/: awdcr.rs  awdtr.rs  cr.rs  icr.rs  ier.rs  isr.rs  result0.rs  result1.rs  result2.rs  result3.rs  result4.rs  result5.rs  result6.rs  result7.rs  sample.rs  sqrcfr.rs  start.rs  trigger.rs
src/atim/: af1.rs  af2.rs  arr.rs  bdtr.rs  ccer.rs  ccmr1cap.rs  ccmr1cmp.rs  ccmr2cap.rs  ccmr2cmp.rs  ccmr3cap.rs  ccmr3cmp.rs  ccr1.rs  ccr2.rs  ccr3.rs  ccr4.rs  ccr5.rs  ccr6.rs  cr1.rs  cr2.rs  dtr2.rs  egr.rs  icr.rs  ier.rs  isr.rs  psc.rs  rcr.rs  smcr.rs  tisel1.rs  tisel2.rs
src/bgr/: cr.rs
src/btim1/: cr1.rs  cr2.rs  dier.rs  egr.rs  icr.rs  isr.rs  psc.rs  smcr.rs
src/cordic/: csr.rs  x.rs  y.rs  z.rs
src/crc/: result.rs
src/dac/: cr0.rs  cr1.rs  dhr12l1.rs  dhr12l2.rs  dhr12ld.rs  dhr12r1.rs  dhr12r2.rs  dhr12rd.rs  dhr8r1.rs  dhr8r2.rs  dhr8rd.rs  dor1.rs  dor2.rs  swtrgr.rs
src/dma/: ccnt1.rs  ccnt2.rs  ccnt3.rs  ccnt4.rs  cdstaddr1.rs  cdstaddr2.rs  cdstaddr3.rs  cdstaddr4.rs  cnt2.rs  cnt3.rs  cnt4.rs  csr1.rs  csr2.rs  csr3.rs  csr4.rs  csrcaddr1.rs  csrcaddr2.rs  csrcaddr3.rs  csrcaddr4.rs  dstaddr2.rs  dstaddr3.rs  dstaddr4.rs  icr.rs  isr.rs  srcaddr2.rs  trig2.rs  (+4 more)
(+149 files in other folders)
