[package]
name = "cw32l012_pac"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
vcell = "0.1.2"

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] } 
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
rtt-target = "0.6.2"

[features]
default = ["critical-section"]
rt = ["cortex-m-rt/device"]
