[package]
name = "cw32l012_pac"
version = "0.1.0"
edition = "2024"
description = "Peripheral access crate for the CW32L012 microcontroller."
repository = "https://github.com/Lioyae/cw32l012-pac"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cw32", "cw32l010", "pac", "embedded", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
vcell = "0.1.2"

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] } 
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
rtt-target = "0.6.2"

[features]
default = ["critical-section"]
rt = ["cortex-m-rt/device"]
